--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 body {
  background-color: lightblue; 
 }
+
+h1 {
+ background-color: gray;
+}
+
+h2 {
+ background-color: gray;
+}
+
+h3 {
+ background-color: gray;
+}
